kubernetes/nas/apps/flux-system/add-ons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
spec:
  ingressClassName: "internal-nginx"
  rules:
    - host: &host "flux-receiver-nas.greyrock.casa"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
